fix: 修复邮件通知条件判断语法错误

--- a/.github/workflows/check-feeds.yml
+++ b/.github/workflows/check-feeds.yml
@@ -129,7 +129,7 @@ jobs:
           fi
 
       - name: Send email notification
-        if: always() && secrets.EMAIL_USERNAME != ''
+        if: always()
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
