--- a/.github/workflows/check-feeds.yml
+++ b/.github/workflows/check-feeds.yml
@@ -2,8 +2,8 @@ name: Check RSS Feeds
 
 on:
   schedule:
-    # 每天早上 10 点 (北京时间 UTC+8，即 UTC 2 点) 运行
-    - cron: '0 2 * * *'
+    # 每小时运行一次（测试用）
+    - cron: '0 * * * *'
   workflow_dispatch: # 允许手动触发
 
 jobs:
